--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ ul.portfolionav li.pnav  {
 		text-decoration:none;
 		text-transform: uppercase;
 		font-size: 25pt;
-        line-height: 0.5em;
+        line-height: 0.0em;
         color: #909090;
     }
 	#link-top{
@@ -585,6 +585,12 @@ and (min-width : 600px) and (max-width : 700px) {
     }
 }
 @media only screen
+and (min-width : 100) and (max-width : 320px) {
+    .navbar ul {
+    margin-left: -180px !important;
+    }
+}
+@media only screen
 and (min-width : 600px) and (max-width : 826px) {
     .navbar ul.portfolionav li a {
     padding-left: 20px;
@@ -644,6 +650,12 @@ and (min-width : 770px) and (max-width : 950px) {
     left: -50px;
 }
 }
+@media only screen 
+and (min-width : 330px) and (max-width : 1024px) {
+    .navbar ul {   
+    margin-left: -30px !important;
+}
+}
 @media only screen
 and (max-width : 1024px) {
 .portfolio {
@@ -667,7 +679,6 @@ and (max-width : 1024px) {
     height: 70px;
     padding: 0;
     margin-top: -220px !important;
-    margin-left: -80px !important;
     padding-left: 260px;     
     background: #fff;
     }
