--- a/style.css
+++ b/style.css
@@ -231,7 +231,6 @@ ul.portfolionav li.pnav  {
     width: 70%;
 }
 .portfolio-listing {
-    width: 100%;
     height: 305px;
     clear: both;
     padding-top: 20px;
@@ -578,6 +577,8 @@ and (min-width : 600px) {
         border-top-left-radius: 4px !important;
         border-bottom-left-radius: 4px !important;
     }
+    .portfolio-listing{
+}
 }
 @media only screen
 and (min-width : 600px) and (max-width : 700px) {
@@ -591,8 +592,8 @@ and (min-width : 600px) and (max-width : 700px) {
     }
 }
 @media only screen
-and (min-width : 100px) and (max-width : 320px) {
-    .navbar ul {
+and (max-width : 320px) {
+.navbar ul {
     margin-left: -180px !important;
     }
 .portfolio-listing {
@@ -605,8 +606,12 @@ and (min-width : 100px) and (max-width : 320px) {
     padding-bottom: 20px;
     padding-top: 20px;
     position: relative;
-    width: 300px !important;
-    margin-left: -20px;
+    width: 330px !important;
+    margin-left: -15px !important;
+}
+.project-info p {
+    font-size: .8em !important;
+    line-height: 1.4em !important;
 }
 /*Specific Project 480 320 tweaks*/
 .tovolocherrypitter {
@@ -742,10 +747,6 @@ and (min-width : 100px) and (max-width : 320px) {
     margin: 0px !important;
     padding: 5px 20px 5px 5px !important;
     position: relative;
-}
-.project-info p {
-    font-size: .8em;
-    line-height: 1.4em;
 }
 }
 @media only screen
