--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
     margin-top: -18px;
 }
 .nudgeup {
-    margin-top: -20px !important;
+    margin-top: -10px !important;
 }
 .nudgedown {
     margin-top: 0px !important;
@@ -231,7 +231,6 @@ ul.portfolionav li.pnav  {
     width: 70%;
 }
 .portfolio-listing {
-    width: 100%;
     height: 305px;
     clear: both;
     padding-top: 20px;
@@ -250,6 +249,7 @@ ul.portfolionav li.pnav  {
     float: right;
     opacity: .8;
     padding: 10px;
+    padding-bottom: 20px;
     margin-right: 20px;
     position: absolute;
     right: 0px;
@@ -331,6 +331,9 @@ img.portfoliophoto {
     font-size: 1.3em;
      color: #3D3D3D;
 }
+p.project-info {
+        text-overflow: hidden !important;
+}
 .project-info p {
     line-height: 1.6em;
     font-size: .9em;
@@ -393,11 +396,11 @@ img.portfoliophoto {
     color: #888;
 }
 .label_9 {
-    padding-lef: 5px;
+    padding-left: 5px;
 }
 .via h3 {
     font-size: 1.4em;
-    line-height: 50%;
+    line-height: 90%;
     padding-left: 35px;
     margin-bottom: 15px;
     position: relative;
@@ -543,7 +546,6 @@ border:5px solid #ddd;
 margin:30px 0;
 display:block;
 /*MEDIA QUERIES*/
-
 }
 @media only screen
 and (max-width : 950px) {
@@ -587,12 +589,10 @@ and (min-width : 600px) and (max-width : 700px) {
     }
 }
 @media only screen
-and (min-width : 100px) and (max-width : 320px) {
-    .navbar ul {
+and (min-width : 320px) {
+.navbar ul {
     margin-left: -180px !important;
     }
-<<<<<<< HEAD
-=======
 .portfolio-listing {
     background-color: #E2E2E2;
     border-bottom-left-radius: 8px;
@@ -603,13 +603,19 @@ and (min-width : 100px) and (max-width : 320px) {
     padding-bottom: 20px;
     padding-top: 20px;
     position: relative;
-    width: 300px !important;
-    margin-left: -20px;
+    width: 330px !important;
+    margin-left: -15px !important;
 }
->>>>>>> parent of cad52c1... More effort into mobile issues
+.project-info p {
+    font-size: .8em !important;
+    line-height: 1.4em !important;
+}
 /*Specific Project 480 320 tweaks*/
 .tovolocherrypitter {
     height: 440px;
+}
+.tovolocherrypitter.portfolio-listing {
+    height: 420px;
 }
 .tovolocherrypitter .project-info {
     top: 200px !important;
@@ -617,11 +623,12 @@ and (min-width : 100px) and (max-width : 320px) {
 .tovolospatulas {
     height: 550px !important;
 }
+.tovolospatulas.portfolio-listing {
+    height: 510px !important;
+}
 .tovolospatulas .project-info {
     top: 200px !important;
 }
-<<<<<<< HEAD
-=======
 .proj-wheelerdealerediting .project-info {
     top: 220px !important;
 }
@@ -738,11 +745,6 @@ and (min-width : 100px) and (max-width : 320px) {
     padding: 5px 20px 5px 5px !important;
     position: relative;
 }
-.project-info p {
-    font-size: .8em;
-    line-height: 1.4em;
-}
->>>>>>> parent of cad52c1... More effort into mobile issues
 }
 @media only screen
 and (min-width : 600px) and (max-width : 826px) {
@@ -988,6 +990,12 @@ and (min-width : 1024px) {
 	  margin-left: -10px; 			
 }
 }
+@media only screen 
+and (min-width : 320px) and (max-width : 480px) {
+    .portfoliolisting {
+        width: 100%;
+    }
+}
 @media only screen
 and (max-width : 480px) {
 #aboutbox1 {
@@ -1025,7 +1033,6 @@ margin-top: 0 !important;
     padding-bottom: 20px;
     padding-top: 20px;
     position: relative;
-    width: 100%;
     height: 470px;
 }
 img.portfoliophoto {
@@ -1169,8 +1176,8 @@ and (min-width : 700px) and (max-width : 768px) {
     }
 }
 @media only screen
-and (min-width : 768px) {
-        .navbar ul.mainnav li a {
+and (min-width : 768px) and (max-width : 828px) {
+    .navbar ul.mainnav li a {
     margin-top: -5px !important;
     }
 }
@@ -1200,8 +1207,14 @@ and (max-width : 1022px) {
     }
     }
 }
+@media only screen
+and (min-width : 950px) and (max-width : 1024px) { 
+    .portfolionav {
+        top: 85px !important;
+    }
+}
 @media only screen 
-and (min-width : 740px) {
+and (min-width : 740px) and (max-width : 1024px) {
     .navbar {
         right: none;
         top: -50px;
@@ -1221,7 +1234,7 @@ and (min-width : 1194px) {
     }
 }
 @media only screen 
-and (max-width : 1193px) {
+and (max-width : 1024px) {
   .navbar ul li a {
         color: #888;
        font-size: .5em;
@@ -1533,13 +1546,11 @@ and (max-width : 777px) {
     width: auto; 
 	}
 }
-}
 @media only screen
 and (min-width : 1400px) {
     #id_7 textarea {
         width: 600px;
     }
-}
 }
 @media only screen 
 and (max-width : 758px) {
